# pydm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/agents/skills/pydm/: SKILL.md
pydm/: __init__.py  service_container.py
tests/: test_service_container.py
