[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydmpro"
version = "0.1.2"
description = "Python Dependency Manager"
authors = [
  { name = "Ariana Maghsoudi", email = "ariana.maghsoudi82@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "underpyx"
]

[project.optional-dependencies]
dev = ["pytest", "assertpy"]

[tool.setuptools.packages.find]
include = ["pydm*"]
exclude = ["tests*"]
